<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Order of Operations Quiz</string>
    <string name="order_of_operations_quiz">Do You Know Order of Operations?</string>
    <string name="question_1">1. Select all true statements about order of operations:</string>
    <string name="question_1_check1">Multiplication has order precedence over division</string>
    <string name="question_1_check2">Exponents (i.e. powers and square roots) has order precedence over multiplication</string>
    <string name="question_1_check3">Addition and Subtraction are solved as they are encountered from left to right</string>
    <string name="question_1_check4">If there are multiple grouping symbols, solve the outermost first</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">3. Following order of operation rules, which step comes first: \n      48÷3 + 2[12×3 - |7 - 16|]</string>
    <string name="question_3_radio1">48 ÷ 3</string>
    <string name="question_3_radio2">3 + 2</string>
    <string name="question_3_radio3">12 × 3</string>
    <string name="question_3_radio4">7 - 16</string>
    <string name="question_4">Question 4</string>
    <string name="question_5">Question 5</string>
    <string name="submit">Grade Quiz</string>
    <string name="reset">Retake Quiz</string>
    <string name="email_results">Email Results</string>
    <string name="email_subject">Order of Operations Quiz Results for <xliff:g example="George" id="name">%s</xliff:g></string>
    <string name="name">Name:</string>
    <string name="input_answer">Input Answer</string>
    <string name="title">Title</string>
    <string name="input_name">Input Name</string>
    <string name="radio_buttons_for_question_3">Radio Buttons for Question 3</string>
</resources>
